# bingo

./: .gitignore  Dockerfile  LICENCE  README.md  main.py  pyproject.toml
.github/workflows/: build.yaml
