[tool.poetry]
name = "bingo"
version = "0.1.0"
description = ""
authors = ["Chris Pressland <mail@cpressland.io>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"
mypy = "^0.910"
pytest = "^6.2.4"
ptpython = "^3.0.19"
xenon = "^0.7.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
